# AirportProblem

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
data/: airports.csv  empty.csv
scripts/: build.sh  build_and_test.sh  coverage.sh
src/: CMakeLists.txt
src/core/: Airport.cpp  Airport.h  AirportDatabase.cpp  AirportDatabase.h  RouteCalculator.cpp  RouteCalculator.h
src/ui/: AirportTableModel.cpp  AirportTableModel.h  AppController.cpp  AppController.h  MainWindow.cpp  MainWindow.h  main.cpp
tests/: CMakeLists.txt  test_airport.cpp  test_airport_database.cpp  test_route_calculator.cpp
